--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title & Branding -->
-    <title>MaterialMatrix | AI-Powered Procurement Platform</title>
+    <title>Ritzyard | AI-Powered Procurement Platform</title>
         <link rel="icon" type="image/png" href="./src/assets/dashboard-ai.jpg" />
 
-    <meta name="description" content="MaterialMatrix is an AI-powered procurement platform revolutionizing how businesses source raw materials — Smart. Fast. Reliable." />
-    <meta name="author" content="MaterialMatrix" />
+    <meta name="description" content="Ritzyard is an AI-powered procurement platform revolutionizing how businesses source raw materials — Smart. Fast. Reliable." />
+    <meta name="author" content="Ritzyard" />
 
     <!-- SEO Meta Tags -->
-    <meta name="keywords" content="procurement, AI procurement, MaterialMatrix, construction materials, sourcing platform, suppliers, manufacturing, B2B, raw materials" />
+    <meta name="keywords" content="procurement, AI procurement, Ritzyard, construction materials, sourcing platform, suppliers, manufacturing, B2B, raw materials" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#d35400" />
 
     <!-- Open Graph (For Social Sharing) -->
-    <meta property="og:title" content="MaterialMatrix | AI-Powered Procurement Platform" />
+    <meta property="og:title" content="Ritzyard | AI-Powered Procurement Platform" />
     <meta property="og:description" content="Revolutionizing how businesses source raw materials — Smart. Fast. Reliable." />
     <meta property="og:image" content="https://yourdomain.com/assets/og-image.png" />
     <meta property="og:url" content="https://yourdomain.com" />
@@ -25,10 +25,10 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MaterialMatrix | AI-Powered Procurement Platform" />
+    <meta name="twitter:title" content="Ritzyard | AI-Powered Procurement Platform" />
     <meta name="twitter:description" content="Smart. Fast. Reliable — AI-driven procurement for modern businesses." />
     <meta name="twitter:image" content="https://yourdomain.com/assets/og-image.png" />
-    <meta name="twitter:site" content="@materialmatrix" />
+    <meta name="twitter:site" content="@ritzyard" />
 
     <!-- Favicon -->
 
