--- a/index.html
+++ b/index.html
@@ -4,36 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Title & Branding -->
-    <title>RitzYard | AI-Powered Procurement Platform</title>
-        <link rel="icon" type="image/png" href="./src/assets/dashboard-ai.jpg" />
-
-    <meta name="description" content="RitzYard is an AI-powered procurement platform revolutionizing how businesses source raw materials — Smart. Fast. Reliable." />
-    <meta name="author" content="RitzYard" />
+    <!-- Primary Meta Tags -->
+    <title>ritzyard | AI-Powered Construction Material Procurement Platform India</title>
+    <meta name="title" content="ritzyard | AI-Powered Construction Material Procurement Platform India" />
+    <meta name="description" content="ritzyard is India's leading AI-powered procurement platform for construction materials. Get instant quotes from 500+ verified suppliers for TMT steel, cement, bricks, sand & more. Smart sourcing with 98% on-time delivery across 28 states." />
+    <meta name="author" content="ritzyard" />
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://ritzyard.com/" />
 
     <!-- SEO Meta Tags -->
-    <meta name="keywords" content="procurement, AI procurement, RitzYard, construction materials, sourcing platform, suppliers, manufacturing, B2B, raw materials" />
-    <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#d35400" />
+    <meta name="keywords" content="ritzyard, construction materials India, TMT steel bars price, cement price today, building materials online, construction material suppliers India, TMT bars Fe500, Fe550 steel, OPC cement, PPC cement, AAC blocks, red bricks price, river sand suppliers, M sand price, construction aggregates, steel rods wholesale, cement bags bulk, verified construction suppliers, AI procurement platform, instant material quotes, construction material delivery, B2B construction marketplace, building materials wholesale India, infrastructure materials, real estate construction supplies, commercial construction materials, residential building materials, construction project procurement, bulk order construction materials, material sourcing platform, smart procurement India" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="bingbot" content="index, follow" />
+    <meta name="theme-color" content="#c15738" />
+    <meta name="msapplication-TileColor" content="#c15738" />
+    
+    <!-- Geographic Tags -->
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="3 days" />
+    <meta name="distribution" content="global" />
+    <meta name="rating" content="general" />
 
-    <!-- Open Graph (For Social Sharing) -->
-    <meta property="og:title" content="RitzYard | AI-Powered Procurement Platform" />
-    <meta property="og:description" content="Revolutionizing how businesses source raw materials — Smart. Fast. Reliable." />
-    <meta property="og:image" content="https://yourdomain.com/assets/og-image.png" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ritzyard.com/" />
+    <meta property="og:title" content="ritzyard | AI-Powered Construction Material Procurement Platform" />
+    <meta property="og:description" content="India's smartest construction material sourcing platform. Get instant quotes from 500+ verified suppliers. TMT steel, cement, bricks & more with 98% on-time delivery." />
+    <meta property="og:image" content="https://ritzyard.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="ritzyard - AI-Powered Construction Material Procurement" />
+    <meta property="og:site_name" content="ritzyard" />
+    <meta property="og:locale" content="en_IN" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="RitzYard | AI-Powered Procurement Platform" />
-    <meta name="twitter:description" content="Smart. Fast. Reliable — AI-driven procurement for modern businesses." />
-    <meta name="twitter:image" content="https://yourdomain.com/assets/og-image.png" />
+    <meta name="twitter:url" content="https://ritzyard.com/" />
+    <meta name="twitter:title" content="ritzyard | AI-Powered Construction Material Procurement" />
+    <meta name="twitter:description" content="India's smartest construction material sourcing. 500+ verified suppliers. Instant quotes. 98% on-time delivery." />
+    <meta name="twitter:image" content="https://ritzyard.com/og-image.png" />
     <meta name="twitter:site" content="@ritzyard" />
+    <meta name="twitter:creator" content="@ritzyard" />
 
     <!-- Favicon -->
-
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/ritzyardlogo.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/src/assets/logo.png" />
 
     <!-- Google Translate - Hidden Implementation -->
     <meta name="google" content="notranslate" />
@@ -74,6 +94,48 @@
         position: static !important;
       }
     </style>
+
+    <!-- Structured Data / Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "ritzyard",
+      "url": "https://ritzyard.com",
+      "logo": "https://ritzyard.com/logo.png",
+      "description": "India's leading AI-powered procurement platform for construction materials",
+      "sameAs": [
+        "https://twitter.com/ritzyard",
+        "https://www.linkedin.com/company/ritzyard",
+        "https://www.facebook.com/ritzyard"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-XXXXXXXXXX",
+        "contactType": "customer service",
+        "email": "support@ritzyard.com",
+        "areaServed": "IN",
+        "availableLanguage": ["English", "Hindi"]
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "IN"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "ritzyard",
+      "url": "https://ritzyard.com",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://ritzyard.com/products?search={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
 
   </head>
 
