feat: Enhanced SEO configuration and logo assets - Updated SEO meta tags, robots.txt, and sitemap.xml - Added ritzlogo.png and favicon assets - Updated index.html with improved SEO structure - Enhanced .htaccess and vercel.json configurations - Optimized for Google crawling and brand visibility

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>ritzyard | AI-Powered Construction Material Procurement Platform India</title>
-    <meta name="title" content="ritzyard | AI-Powered Construction Material Procurement Platform India" />
-    <meta name="description" content="ritzyard is India's leading AI-powered procurement platform for construction materials. Get instant quotes from 500+ verified suppliers for TMT steel, cement, bricks, sand & more. Smart sourcing with 98% on-time delivery across 28 states." />
+    <title>ritzyard | India's #1 AI Construction Material Procurement Platform</title>
+    <meta name="title" content="ritzyard | India's #1 AI Construction Material Procurement Platform" />
+    <meta name="description" content="ritzyard - India's leading AI-powered construction material procurement platform. Get instant quotes from 500+ verified suppliers for TMT steel, cement, bricks, sand & aggregates. Smart sourcing with 98% on-time delivery across 28 states. Transform your construction procurement today!" />
     <meta name="author" content="ritzyard" />
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://ritzyard.com/" />
 
     <!-- SEO Meta Tags -->
-    <meta name="keywords" content="ritzyard, construction materials India, TMT steel bars price, cement price today, building materials online, construction material suppliers India, TMT bars Fe500, Fe550 steel, OPC cement, PPC cement, AAC blocks, red bricks price, river sand suppliers, M sand price, construction aggregates, steel rods wholesale, cement bags bulk, verified construction suppliers, AI procurement platform, instant material quotes, construction material delivery, B2B construction marketplace, building materials wholesale India, infrastructure materials, real estate construction supplies, commercial construction materials, residential building materials, construction project procurement, bulk order construction materials, material sourcing platform, smart procurement India" />
+    <meta name="keywords" content="ritzyard, ritzyard India, ritzyard procurement, ritzyard construction, ritzyard platform, ritzyard materials, construction materials India, TMT steel bars price, cement price today, building materials online, construction material suppliers India, TMT bars Fe500, Fe550 steel, OPC cement, PPC cement, AAC blocks, red bricks price, river sand suppliers, M sand price, construction aggregates, steel rods wholesale, cement bags bulk, verified construction suppliers, AI procurement platform, instant material quotes, construction material delivery, B2B construction marketplace, building materials wholesale India, infrastructure materials, real estate construction supplies, commercial construction materials, residential building materials, construction project procurement, bulk order construction materials, material sourcing platform, smart procurement India, construction materials B2B, construction supply chain, building material quotes India" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
     <meta name="bingbot" content="index, follow" />
@@ -32,8 +32,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ritzyard.com/" />
-    <meta property="og:title" content="ritzyard | AI-Powered Construction Material Procurement Platform" />
-    <meta property="og:description" content="India's smartest construction material sourcing platform. Get instant quotes from 500+ verified suppliers. TMT steel, cement, bricks & more with 98% on-time delivery." />
+    <meta property="og:title" content="ritzyard | India's #1 AI Construction Material Procurement Platform" />
+    <meta property="og:description" content="ritzyard - Transform your construction material procurement with AI. Get instant quotes from 500+ verified suppliers. TMT steel, cement, bricks & aggregates with 98% on-time delivery across India." />
     <meta property="og:image" content="https://ritzyard.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -44,16 +44,21 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://ritzyard.com/" />
-    <meta name="twitter:title" content="ritzyard | AI-Powered Construction Material Procurement" />
-    <meta name="twitter:description" content="India's smartest construction material sourcing. 500+ verified suppliers. Instant quotes. 98% on-time delivery." />
+    <meta name="twitter:title" content="ritzyard | India's #1 AI Construction Material Procurement" />
+    <meta name="twitter:description" content="ritzyard - AI-powered construction material procurement. 500+ verified suppliers. Instant quotes. 98% on-time delivery across India." />
     <meta name="twitter:image" content="https://ritzyard.com/og-image.png" />
     <meta name="twitter:site" content="@ritzyard" />
     <meta name="twitter:creator" content="@ritzyard" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/src/assets/ritzyardlogo.svg" />
-    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
-    <link rel="apple-touch-icon" href="/src/assets/logo.png" />
+    <link rel="icon" type="image/png" href="/ritzlogo.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/ritzlogo.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/ritzlogo.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/ritzlogo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/ritzlogo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/ritzlogo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/ritzlogo.png" />
+    <link rel="shortcut icon" href="/ritzlogo.png" />
 
     <!-- Google Translate - Hidden Implementation -->
     <meta name="google" content="notranslate" />
@@ -101,9 +106,13 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "ritzyard",
+      "alternateName": ["RitzYard", "ritzyard India", "ritzyard procurement platform"],
       "url": "https://ritzyard.com",
-      "logo": "https://ritzyard.com/logo.png",
-      "description": "India's leading AI-powered procurement platform for construction materials",
+      "logo": "https://ritzyard.com/ritzlogo.png",
+      "description": "India's leading AI-powered construction material procurement platform connecting businesses with 500+ verified suppliers",
+      "foundingDate": "2024",
+      "slogan": "Smart Material Procurement - Where Value Meets Velocity",
+      "keywords": "construction materials, procurement platform, TMT steel, cement, building materials, B2B marketplace India",
       "sameAs": [
         "https://twitter.com/ritzyard",
         "https://www.linkedin.com/company/ritzyard",
@@ -128,12 +137,36 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "ritzyard",
+      "alternateName": "ritzyard - Construction Material Procurement Platform",
       "url": "https://ritzyard.com",
+      "description": "AI-powered platform for construction material procurement in India",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://ritzyard.com/products?search={search_term_string}",
         "query-input": "required name=search_term_string"
       }
+    }
+    </script>
+
+    <!-- Additional Structured Data for Better Brand Recognition -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "ritzyard",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "INR"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.6",
+        "ratingCount": "500"
+      },
+      "description": "ritzyard is India's #1 AI-powered construction material procurement platform. Connect with 500+ verified suppliers for TMT steel, cement, bricks, sand and all building materials."
     }
     </script>
 
